kube/kustomize/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws-ic
spec:
  selector:
    matchLabels:
      app: ${app-label}
  replicas: 1
  template:
    metadata:
      labels:
        app: ${app-label}
    spec:
      securityContext:
        runAsUser: 999
      imagePullSecrets:
        - name: image-pull-secret
      serviceAccountName: morganfundsa
      containers:
        - name: ${app-label}
          image: app-image
          resources:
            requests:
              memory: 6Gi
              cpu: 500m
            limits:
              memory: 8Gi
              cpu: 1000m
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: ${context-path}/actuator/keepalive
              port: 8080
            timeoutSeconds: 5
            initialDelaySeconds: 70
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: ${context-path}/actuator/keepalive
              port: 8080
            timeoutSeconds: 5
            initialDelaySeconds: 70
            periodSeconds: 10
