kube/kustomize/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ${app-label}
  labels:
    app: ${app-label}
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: ${app-label}
